Registro funcional con validacion y redireccionamiento segun admitido

--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -31,7 +31,7 @@
                     <button id="boton" (click)="iniciarSesion()">Iniciar Sesión</button>
                 </div>
                 <div class="col-9 justify-content-center d-flex pt-3 p-0">
-                    <span>¿No tienes una cuenta? <a>Regístrese</a></span>
+                    <span>¿No tienes una cuenta? <a routerLink="/registro">Regístrese</a></span>
                 </div>
             </div>
         </div>
