--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,13 @@
 .navbar{
     background-color: rgb(255, 170, 0);
 }
+
+html{
+    font-size: larger;
+}
+
+.active{
+    border-radius: 100%;
+    background-color: black;
+    color: white !important;
+}
