--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,20 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Home</a>
+            <a class="nav-link active" [routerLink]="rutaHome" aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Link</a>
           </li>
-          <li class="nav-item dropdown">
-            <span class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Administración
-            </span>
-            <ul class="dropdown-menu navbar" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item">Solicitudes de usuarios: </a></li>
-              <li><a class="dropdown-item">Another action</a></li>
-              <li><a class="dropdown-item">Something else here</a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link">Solicitudes de usuarios <span class="notificacion px-2" *ngIf="usuariosPendientes!=0">{{usuariosPendientes}}</span></a>
           </li>
         </ul>
         <div class="d-flex">
