--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -1,1 +1,4 @@
 <app-menu></app-menu>
+<div class="container-fluid">
+    <img src="../../assets/images/Fondo pantalla inicial.png" alt="Imagen autobus">
+</div>
