--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -1,4 +1,7 @@
 <app-menu></app-menu>
 <div class="container-fluid">
-    <img src="../../assets/images/Fondo pantalla inicial.png" alt="Imagen autobus">
+    <app-portada></app-portada>
+    <div class="d-flex justify-content-center">
+    <p class="h2 pt-4">¡Reserve sus viajes de una forma mucho más fácil!</p>
+</div>
 </div>
