--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,9 +8,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active rounded-circle" [routerLink]="rutaHome" aria-current="page">Inicio</a>
         </li>
-        <li class="nav-item" *ngIf="usuarioActivo.tipo=='ad'">
+        <div *ngIf="usuarioActivo.tipo=='ad'" class="d-flex">
+        <li class="nav-item">
           <a class="nav-link" routerLinkActive="active rounded-circle" [routerLink]="'/solicitudes'">Solicitudes <span class="px-2 rounded-circle" [ngClass]="{'notificacion':this.router.url!='/solicitudes'}" *ngIf="usuariosPendientes!=0 && this.router.url!='/solicitudes'">{{usuariosPendientes}}</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active rounded-circle" [routerLink]="'/paradasAdmin'">Paradas</a>
+        </li>
+      </div>
       </ul>
     </div>
     <div class="d-flex">
