Alta de paradas funcional

--- a/src/app/paradas/paradas.component.html
+++ b/src/app/paradas/paradas.component.html
@@ -1,6 +1,7 @@
 <app-menu></app-menu>
 <div class="container ">
     <div class="row"><div class="col-12"><h2 class="pt-4 d-flex justify-content-center">Paradas</h2><br></div></div>
+    <button type="button" class="btn btn-dark mb-2" [routerLink]="['/nuevaParada']">Crear</button>
     <table class="table">
         <thead class="thead">
           <tr>
