--- a/src/app/nueva-parada/nueva-parada.component.html
+++ b/src/app/nueva-parada/nueva-parada.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2 class="pt-4 d-flex justify-content-center">Actualizar parada</h2>
+      <h2 class="pt-4 d-flex justify-content-center">Nueva parada</h2>
     </div>
   </div>
 
@@ -12,14 +12,15 @@
       <label for="nombre" class="d-flex label">Nombre:</label>
     </div>
     <div class="col-md-9 col-12">
-      <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]="parada.nombre">
+      <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]="nombre">
     </div>
+    
   </div>
   
   <div class="row pt-4">
     <div class="col-md-3 col-12"></div>
-    <div class="col-md-9 col-12 d-flex justify-content-md-between flex-column flex-md-row">
-      <button type="button" class="btn btn-dark mb-2 mb-md-0" (click)="editar()">Editar</button>
+    <div class="col-md-9 col-12 d-flex justify-content-between flex-column flex-md-row">
+      <button type="button" class="btn btn-dark mb-2 mb-md-0" (click)="crearParada()">Crear</button>
       <button type="button" class="btn btn-danger" [routerLink]="['/paradasAdmin']">Cancelar</button>
     </div>
   </div>
