Borrar autobuses funcional

--- a/src/app/autobuses/autobuses.component.html
+++ b/src/app/autobuses/autobuses.component.html
@@ -18,7 +18,7 @@
             <td>{{autobus.capacidad}}</td>
             <td>
               <button type="button" class="btn btn-dark">Editar</button>
-              <button type="button" class="btn btn-danger">Eliminar</button>
+              <button type="button" class="btn btn-danger" (click)="eliminarAutobus(autobus.id)">Eliminar</button>
             </td>            
           </tr>
         </tbody>
