--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active rounded-circle" [routerLink]="'/autobuses'">Autobuses</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active rounded-circle" [routerLink]="'/rutasAdmin'">Rutas</a>
+        </li>
       </div>
       </ul>
     </div>
