--- a/src/app/rutas-admin/rutas-admin.component.html
+++ b/src/app/rutas-admin/rutas-admin.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div class="container ">
     <div class="row"><div class="col-12"><h2 class="pt-4 d-flex justify-content-center">Rutas</h2><br></div></div>
-    <button type="button" class="btn btn-dark mb-2">Crear</button>
+    <button type="button" class="btn btn-dark mb-2" [routerLink]="['/nuevaRuta']">Crear</button>
     <table class="table">
         <thead class="thead">
           <tr>
