--- a/src/app/rutas-admin/rutas-admin.component.html
+++ b/src/app/rutas-admin/rutas-admin.component.html
@@ -23,7 +23,7 @@
             <td><table><tr *ngFor="let parada of ruta.nombresParadas">{{parada}}</tr></table></td>
             <td><table><tr *ngFor="let autobus of ruta.nombresAutobuses">{{autobus}}</tr></table></td>
             <td>
-              <button type="button" class="btn btn-dark">Editar</button>
+              <button type="button" class="btn btn-dark" [routerLink]="['/editarRuta',ruta.id]">Editar</button>
               <button type="button" class="btn btn-danger" (click)="borrarRuta(ruta.id)">Eliminar</button>
             </td>            
           </tr>
