Componente de rutas creado

--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -2,6 +2,9 @@
 <div class="container-fluid">
     <app-portada></app-portada>
     <div class="d-flex justify-content-center">
-    <p class="h2 pt-4">¡Reserve sus viajes de una forma mucho más fácil!</p>
-</div>
+        <p class="h2 pt-4">¡Reserve sus viajes de una forma mucho más fácil!</p>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+        <button type="button" class="btn btn-dark" [routerLink]="['/rutas']">Ver rutas disponibles</button>
+    </div>
 </div>
