--- a/src/app/rutas-admin/nueva-ruta/nueva-ruta.component.html
+++ b/src/app/rutas-admin/nueva-ruta/nueva-ruta.component.html
@@ -11,8 +11,16 @@
                 <div class="col-md-2 col-12">
                     <label for="nombre" class="d-flex label">Nombre:</label>
                 </div>
-                <div class="col-md-10 col-12">
+                <div class="col-md-4 col-12">
                     <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]="nombre">
+                </div>
+                <div class="col-md-2 col-12">
+                    <label for="nombre" class="d-flex label">Conductores:</label>
+                </div>
+                <div class="col-md-4 col-12">
+                    <select class="form-select" multiple aria-label="multiple select example" [(ngModel)]="usernameConductores" name="conductores">
+                        <option *ngFor="let conductor of conductores" value={{conductor.username}}>{{conductor.username}}</option>
+                    </select>
                 </div>
             </div>
         </div>
