--- a/src/app/rutas-alumno/rutas-alumno.component.html
+++ b/src/app/rutas-alumno/rutas-alumno.component.html
@@ -1,8 +1,29 @@
-<app-menu></app-menu>
 <div class="container">
-    <div class="row">
-        <div class="col-12">
-          <h2 class="pt-4 d-flex justify-content-center">Rutas disponibles</h2>
-        </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="pt-4 d-flex justify-content-center">Rutas</h2>
     </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-5 col-12 rounded border border-dark mt-4 margen" *ngFor="let ruta of rutas" (click)="accederAltaRuta(ruta.id)">
+      <p class="h4 pt-2">{{ruta.nombre}}</p>
+      <div class="row">
+        <div class="col-md-6 col-12">
+          <p class="pt-3 fw-bold">Hora de salida: {{ruta.horaSalida}}</p>
+          <p class="fw-bold">Hora de llegada: {{ruta.horaLlegada}}</p>
+        </div>
+        <div class="col-md-6 col-12 pt-3">
+          <p class="fw-bold">Paradas:</p>
+          <ul>
+            <li *ngFor="let parada of ruta.nombresParadas">{{parada}}</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row d-flex align-self-end">
+        <div class="col-md-6 col-12 py-3">
+          <button type="button" class="btn btn-dark">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
