--- a/src/app/rutas-alumno/rutas-alumno.component.html
+++ b/src/app/rutas-alumno/rutas-alumno.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="container">
   <div class="row">
     <div class="col-12">
@@ -17,11 +18,6 @@
           <ul>
             <li *ngFor="let parada of ruta.nombresParadas">{{parada}}</li>
           </ul>
-        </div>
-      </div>
-      <div class="row d-flex align-self-end">
-        <div class="col-md-6 col-12 py-3">
-          <button type="button" class="btn btn-dark">Aceptar</button>
         </div>
       </div>
     </div>
