--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <label for="username">Nombre de usuario:</label>
                         <input class="input form-control" type="text" name="username" id="username" [(ngModel)]="username" >
-                        <div class="invalid-tooltip">El nombre de usuario debe ser válido: No estar vacío y no tener espacios</div>
+                        <div class="invalid-tooltip">El nombre de usuario debe ser válido: No estar vacío, no tener espacios y carácteres en minúscula.</div>
                     </div>
                 </div>
                 <div class="col-9 pt-4">
