--- a/src/app/autobuses/editar-autobus/editar-autobus.component.html
+++ b/src/app/autobuses/editar-autobus/editar-autobus.component.html
@@ -39,3 +39,4 @@
       <button type="button" class="btn btn-danger" [routerLink]="['/autobuses']">Cancelar</button>
     </div>
   </div>
+  <app-footer></app-footer>
