--- a/src/app/autobuses/nuevo-autobus/nuevo-autobus.component.html
+++ b/src/app/autobuses/nuevo-autobus/nuevo-autobus.component.html
@@ -37,7 +37,8 @@
     <div class="col-md-3 col-12"></div>
     <div class="col-md-9 col-12 d-flex justify-content-between flex-column flex-md-row">
       <button type="button" class="btn btn-dark mb-2 mb-md-0" (click)="crearAutobus()">Crear</button>
-      <button type="button" class="btn btn-danger" [routerLink]="['/paradasAdmin']">Cancelar</button>
+      <button type="button" class="btn btn-danger" [routerLink]="['/autobuses']">Cancelar</button>
     </div>
   </div>
 </div>
+<app-footer></app-footer>
