--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -8,3 +8,4 @@
         <button type="button" class="btn btn-dark" [routerLink]="['/rutas']">Ver rutas disponibles</button>
     </div>
 </div>
+<app-footer></app-footer>
