--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -1,11 +1,17 @@
 <app-menu></app-menu>
 <div class="container-fluid">
     <app-portada></app-portada>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center text-center">
         <p class="h2 pt-4">¡Reserve sus viajes de una forma mucho más fácil!</p>
     </div>
     <div class="d-flex flex-column align-items-center">
         <button type="button" class="btn btn-dark" [routerLink]="['/rutas']">Ver rutas disponibles</button>
+    </div>
+    <div class="d-flex justify-content-center text-center">
+        <p class="h2 pt-4">Acceda a su historial de rutas para comprobar sus asignaciones.</p>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+        <button type="button" class="btn btn-dark" [routerLink]="['/rutas']">Ver rutas asignadas</button>
     </div>
 </div>
 <app-footer></app-footer>
