--- a/src/app/home-conductor/home-conductor.component.html
+++ b/src/app/home-conductor/home-conductor.component.html
@@ -1,3 +1,9 @@
 <app-menu></app-menu>
 <app-portada></app-portada>
+<div class="d-flex justify-content-center text-center">
+    <p class="h2 pt-4">Acceda al listado de rutas para comprobar sus asignaciones.</p>
+</div>
+<div class="d-flex flex-column align-items-center">
+    <button type="button" class="btn btn-dark" [routerLink]="['/rutas',usuarioActivo.username]">Ver rutas asignadas</button>
+</div>
 <app-footer></app-footer>
