solucion redireccionamiento boton home alumno

--- a/src/app/home-alumno/home-alumno.component.html
+++ b/src/app/home-alumno/home-alumno.component.html
@@ -11,7 +11,7 @@
         <p class="h2 pt-4">Acceda a su historial de rutas para comprobar sus asignaciones.</p>
     </div>
     <div class="d-flex flex-column align-items-center">
-        <button type="button" class="btn btn-dark" [routerLink]="['/rutas']">Ver rutas asignadas</button>
+        <button type="button" class="btn btn-dark" [routerLink]="['/misRutas']">Ver rutas asignadas</button>
     </div>
 </div>
 <app-footer></app-footer>
